syntax = "proto3";

package service.basic.voip.v1;

message GetVoipConfigRequest {}

message GetVoipConfigResponse {
  // STUN servers for NAT traversal
  // Format: "stun:hostname:port" or "stun:ip:port"
  repeated string stun_servers = 1;

  // TURN server configuration
  bool turn_enabled = 2;
  string turn_server_url = 3;
  string turn_username = 4;
  string turn_password = 5;
  uint64 turn_ttl = 6;
}
